--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-155.3KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.30MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林), server: 185.167.116.250, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 54.213.250.111, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-218.5KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-2.49MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.24MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇨🇳 中国-476.8KB/s(Youtube:不良林), server: 139.219.130.70, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇨🇳 中国-165.5KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇰🇷 韩国-1.02MB/s(Youtube:不良林), server: 15.165.18.17, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-306.8KB/s(Youtube:不良林), server: 45.61.174.36, port: 31325, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.14MB/s(Youtube:不良林), server: 43.129.87.145, port: 443, type: vmess, uuid: 5bb4d785-4933-44cb-a162-d9a74625d2ee, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 43.129.87.145}}
+  - {name: 🇯🇵 日本-3.27MB/s(Youtube:不良林), server: 13.230.172.77, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇭🇰 香港-2.10MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇨🇳 中国-7.76MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.81MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-155.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-306.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-155.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-306.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-155.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-306.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.10MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-155.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-306.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-155.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-306.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-155.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-306.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-155.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-306.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
