--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.52MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.26MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
-  - {name: 🇫🇷 法国-1.43MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-161.2KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.47MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
   - {name: 🇦🇺 澳大利亚-388.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇺🇸 美国-505.1KB/s(Youtube:不良林), server: v4.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v4.ssrsub.com}}
-  - {name: 🇬🇧 英国-1.91MB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-908.0KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.97MB/s(Youtube:不良林), server: 89.208.248.114, port: 443, type: vmess, uuid: ef1af6e9-2029-4d16-9fc5-c23ff022f143, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 89.208.248.114}}
   - {name: 乌克兰-717.6KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇨🇳 中国-7.76MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.62MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.32MB/s(Youtube:不良林), server: iesei1ei.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: iesei1ei.com}}
+  - {name: 🇯🇵 日本-2.81MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇨🇳 台湾-1.65MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇬🇧 英国-1.56MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-388.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-505.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.91MB/s(Youtube:不良林)
-      - 🇩🇪 德国-908.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
       - 乌克兰-717.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-388.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-505.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.91MB/s(Youtube:不良林)
-      - 🇩🇪 德国-908.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
       - 乌克兰-717.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-388.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-505.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.91MB/s(Youtube:不良林)
-      - 🇩🇪 德国-908.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
       - 乌克兰-717.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-388.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-505.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.91MB/s(Youtube:不良林)
-      - 🇩🇪 德国-908.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
       - 乌克兰-717.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-388.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-505.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.91MB/s(Youtube:不良林)
-      - 🇩🇪 德国-908.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
       - 乌克兰-717.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-388.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-505.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.91MB/s(Youtube:不良林)
-      - 🇩🇪 德国-908.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
       - 乌克兰-717.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-388.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-505.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.91MB/s(Youtube:不良林)
-      - 🇩🇪 德国-908.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
       - 乌克兰-717.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
