--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-9.63MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.73MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-8.86MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.90MB/s(Youtube:不良林), server: 89.208.248.114, port: 443, type: vmess, uuid: ef1af6e9-2029-4d16-9fc5-c23ff022f143, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 89.208.248.114}}
+  - {name: 🇺🇸 美国-4.04MB/s(Youtube:不良林), server: 89.208.248.114, port: 443, type: vmess, uuid: ef1af6e9-2029-4d16-9fc5-c23ff022f143, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 89.208.248.114}}
+  - {name: 🇨🇳 中国-5.67MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1006.8KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
   - {name: 🇨🇳 中国-973.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-554.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-3.43MB/s(Youtube:不良林), server: dajbxus.naikonode.top, port: 15105, type: ssr, cipher: chacha20-ietf, password: NaikoCloud, protocol: auth_aes128_md5, obfs: http_simple, protocol-param: 1596:vsqvobohcqs, obfs-param: 6371f1596.microsoft.com}
+  - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: dajbxus.naikonode.top, port: 15106, type: ssr, cipher: chacha20-ietf, password: NaikoCloud, protocol: auth_aes128_md5, obfs: http_simple, protocol-param: 1596:vsqvobohcqs, obfs-param: 6371f1596.microsoft.com}
+  - {name: 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.67MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1006.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-973.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.67MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1006.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-973.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.67MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1006.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-973.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.67MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1006.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-973.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.67MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1006.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-973.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.67MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1006.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-973.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.67MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1006.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-973.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-554.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
